<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="hackman.trevor.reactiontimetest.BROGActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="true"
        android:id="@+id/relativeLayout"
        android:background="@color/colorBlue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/instructions"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="30dp" />

        <TextView
            android:layout_width="275dp"
            android:layout_height="70dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/press_and_hold_your_finger_to_the_screen_wait_until_the_screen_turns_green_to_release"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textSize="18dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/menu"
            android:id="@+id/textView3"
            android:visibility="visible"
            android:gravity="center"
            android:textStyle="bold"
            android:onClick="onMenuButtonClick"
            android:layout_above="@+id/textView11"
            android:layout_centerHorizontal="true"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/average_is_of_the_last_10_attempts"
            android:id="@+id/textView11"
            android:layout_above="@+id/adView"
            android:layout_centerHorizontal="true"
            android:textSize="14dp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/textView3"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/average"
                android:id="@+id/textView4"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/n_a"
                android:id="@+id/textView5"
                android:layout_marginBottom="20dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/high_score"
                android:id="@+id/textView6"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/n_a"
                android:id="@+id/textView7"
                android:textSize="18dp" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
