<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@color/colorBlue"
    tools:context="hackman.trevor.reactiontimetest.HighScoresActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/high_scores"
        android:id="@+id/textView12"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="26dp"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/clear_all_data"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView9"
        android:textStyle="bold"
        android:onClick="onClearDataClick"
        android:textSize="22sp"
        android:layout_above="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_width="@dimen/highscores_button_width" />

    <Button
        android:text="@string/menu"
        android:layout_width="@dimen/highscores_button_width"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView8"
        android:onClick="onMenuClick"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_above="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_above="@+id/textView8"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="10"
            android:columnCount="3"
            android:id="@+id/gridLayout"
            android:layout_gravity="center_horizontal"
            android:translationX="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_1"
                android:id="@+id/textView14"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS1"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:id="@+id/checkBox"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_2"
                android:id="@+id/textView13"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS2"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_3"
                android:id="@+id/textView15"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS3"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox3"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_4"
                android:id="@+id/textView16"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS4"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox4"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_5"
                android:id="@+id/textView17"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS5"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox5"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_6"
                android:id="@+id/textView18"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS6"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox6"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_7"
                android:id="@+id/textView19"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS7"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox7"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_8"
                android:id="@+id/textView20"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS8"
                android:gravity="center"
                android:layout_gravity="center"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox8"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_9"
                android:id="@+id/textView21"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS9"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox9"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_10"
                android:id="@+id/textView22" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HighScoreValues"
                android:text="@string/n_a_2"
                android:id="@+id/textViewHS10"
                android:gravity="center"
                android:layout_gravity="center" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox10"
                android:checked="false" />
        </GridLayout>

    </LinearLayout>

</RelativeLayout>
